package kz.edu.unicrm.domain;
public class UniversityJournal {
}
