package unicrm.exception;

public class NotResearcherException extends RuntimeException {

    public NotResearcherException(String message) {
        super(message);
    }
}