@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Session & State" {
    class UserSession <<Singleton>> {
        -{static} instance: UserSession
        -currentUser: User
        +getInstance(): UserSession
        +getCurrentUser(): User
    }
}

package "Command Layer" {
    class PublishPaperCommand {
        -researchService: ResearchService
        -userSession: UserSession
        +execute(): void
    }

    class PrintMyPapersCommand {
        -researchService: ResearchService
        -userSession: UserSession
        +execute(): void
    }

    class SubscribeToJournalCommand {
        -journalRepository: JournalRepository
        -userRepository: UserRepository
        -userSession: UserSession
        +execute(): void
    }

    class GetCitationCommand {
        -researchService: ResearchService
        -userSession: UserSession
        +execute(): void
    }

    class ViewTopResearcherCommand {
        -researchService: ResearchService
        -userSession: UserSession
        +execute(): void
    }

    class CreateJournalCommand {
        -researchService: ResearchService
        -userSession: UserSession
        +execute(): void
    }

    class BecomeResearcherCommand {
        -researchService: ResearchService
        -userRepository: UserRepository
        -userSession: UserSession
        +execute(): void
    }

    class CreateResearchProjectCommand {
        -researchProjectRepository: ResearchProjectRepository
        -scanner: Scanner
        +execute(): void
    }

    class JoinResearchProjectCommand {
        -researchProjectRepository: ResearchProjectRepository
        -userSession: UserSession
        -scanner: Scanner
        +execute(): void
    }
}

package "Service Layer" {
    class ResearchService {
        -paperRepo: ResearchPaperRepository
        -journalRepo: JournalRepository
        +becomeResearcher(user: User): ResearcherDecorator
        +publishPaper(author: ResearcherDecorator, paper: ResearchPaper): void
        +calculateHIndex(researcher: ResearcherDecorator): int
        +printPapersSorted(researcher: ResearcherDecorator, c: Comparator<ResearchPaper>): void
        +getTopCitedResearcher(): ResearcherDecorator
    }
}

package "Repository Layer" {
    class UserRepository {
        -fileName: String = "users.json"
        +save(entity: User): void
        +findAll(): List<User>
        +findByRole(role: String): List<User>
    }

    class JournalRepository {
        -fileName: String = "journals.json"
        +save(entity: UniversityJournal): void
        +findAll(): List<UniversityJournal>
        +findById(id: String): UniversityJournal
    }

    class ResearchPaperRepository {
        -fileName: String = "research_papers.json"
        +save(entity: ResearchPaper): void
        +findAll(): List<ResearchPaper>
    }

    class ResearchProjectRepository {
        -fileName: String = "research_projects.json"
        +addProject(project: ResearchProject): void
        +saveAll(projects: List<ResearchProject>): void
        +findAll(): List<ResearchProject>
    }
}

package "Domain Layer" {
    abstract class User {
        -id: String
        -username: String
        -password: String
        -preferredLanguage: Language
        -isResearcher: boolean
    }

    class ResearcherDecorator extends User {
        -baseUser: User
    }

    class ResearchPaper {
        -id: String
        -title: String
        -paperAbstract: String
        -authorUsername: String
        -journalName: String
        -citedPaperIds: List<String>
        -citations: int
        +getCitation(format: Format): String
    }

    class UniversityJournal {
        -id: String
        -name: String
        -subscribers: List<User>
        -papers: List<ResearchPaper>
    }

    class ResearchProject {
        -id: String
        -topic: String
        -participantIds: List<String>
        -paperIds: List<String>
        +addParticipant(userId: String): void
        +addPaper(paperId: String): void
    }

    class NotResearcherException {
        +NotResearcherException(message: String)
    }
}

ResearcherDecorator o-- User : baseUser

PublishPaperCommand o-- ResearchService
PrintMyPapersCommand o-- ResearchService
GetCitationCommand o-- ResearchService
ViewTopResearcherCommand o-- ResearchService
CreateJournalCommand o-- ResearchService
BecomeResearcherCommand o-- ResearchService

SubscribeToJournalCommand o-- JournalRepository
SubscribeToJournalCommand o-- UserRepository

CreateResearchProjectCommand o-- ResearchProjectRepository
JoinResearchProjectCommand o-- ResearchProjectRepository
JoinResearchProjectCommand o-- UserSession

ResearchService o-- ResearchPaperRepository
ResearchService o-- JournalRepository

UserRepository o-- User
JournalRepository o-- UniversityJournal
ResearchPaperRepository o-- ResearchPaper
ResearchProjectRepository o-- ResearchProject

UniversityJournal "1" -- "N" ResearchPaper : contains
UniversityJournal "M" -- "N" User : subscribers
ResearchProject "1" -- "N" User : participantIds
ResearchProject "1" -- "N" ResearchPaper : paperIds

JoinResearchProjectCommand ..> NotResearcherException : throws

@enduml